<resources>
    <string name="app_name">Story App</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="select_language">Select Language</string>
    <string name="stories">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="add_new_story">Add New Story</string>
    <string name="no_image_selected">No image selected</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_image">Choose Image</string>
    <string name="description">Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="file_size_too_large">File size is too large. Please choose a smaller image.</string>
    <string name="failed_to_upload_story">Failed to upload story</string>
    <string name="welcome_message">Welcome to Story App</string>
    <string name="welcome_subtitle">The best place to read and share stories</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="signup_success">Signup Success!</string>
    <string name="signup_failed">Signup Failed: Email is already taken</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="password">Password</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="email">Email</string>
    <string name="email_error">Invalid email address</string>
    <string name="dialog_signup">Don\'t have an account? </string>
    <string name="dialog_login">Already have an account? </string>
    <string name="exit_app">Press back again to exit</string>
    <string name="rto">Try Again</string>
    <string name="no_more_stories">No more stories</string>
    <string name="MAPS_API_KEY">fill with your own API Key</string>
</resources>