...
                Spacer(modifier = Modifier.weight(1f))

                Button(
                    onClick = { settingViewModel.logout() },
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("LogoutButton"),
                    shape = RoundedCornerShape(12.dp),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = MaterialTheme.colorScheme.error
                    )
                ) {
                    Row(
...
